--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Compiled class file
 *.class
 
@@ -21,3 +22,51 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.metadata
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+target/*
+.settings/*
+.classpath
+.project
+.idea
+*.iml
+/target
+npm-debug.log
+/bin/
+/deploy/
+
+### Mac ###
+.DS_Store
+*.swp
+settings.txt
+.svn
+_*
+*.txt
+
+### Logs ###
+*.log
